--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -173,13 +173,7 @@ config ARCH_USE_BUILTIN_BSWAP
 
 config KRETPROBES
 	def_bool y
-	depends on KPROBES && (HAVE_KRETPROBES || HAVE_RETHOOK)
-
-config KRETPROBE_ON_RETHOOK
-	def_bool y
-	depends on HAVE_RETHOOK
-	depends on KRETPROBES
-	select RETHOOK
+	depends on KPROBES && HAVE_KRETPROBES
 
 config USER_RETURN_NOTIFIER
 	bool
